fix: code on safari

--- a/_sass/components/_article.content.scss
+++ b/_sass/components/_article.content.scss
@@ -61,6 +61,7 @@
     &>code {
       font-size: $code-font-size;
       padding: $code-font-size;
+      word-wrap: normal;
       margin: 0;
       display: block;
       line-height: $code-line-height;
